--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <img class="foto-home" src="img/eu.jpg" alt="Foto de João da Silva">
         <h1>João da Silva</h1>
         <p class="subtitulo-principal">Desenvolvedor web</p>
-
+        <a id="followme" href="http://twitter.com"><span>Siga-me no twitter!</span></a>
         <ul>
             <li class="palavra-home eficiencia">Eficiência</li>
             <li class="palavra-home boas-praticas">Boas práticas</li>
@@ -56,7 +56,12 @@
             <h2>Blog</h2>
             <small>Últimos posts</small>
             <ol>
-                <li><a href="blog.html">O essencial de design responsivo</a></li>
+                <li>
+                    <a href="blog.html">O essencial de design responsivo</a>
+                    <p class="inicio-post">
+                        Design responsivo tem ganho cada vez mais atenção como técnica de desenvolvimento de páginas web para dispositivos móveis. Mas como começar?
+                    </p>
+                </li>
                 <li><a href="blog.html">Por que fazer páginas acessíveis?</a></li>
                 <li><a href="blog.html">JavaScript não obstrusivo</a></li>
             </ol>
