Site do samuel l jackson

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt">
 <head>
     <meta charset="UTF-8">
-    <title>João da Silva - Desenvolvedor Web</title>
+    <title>Samuel L. Jackson - Desenvolvedor Web</title>
     <link rel="shortcut icon" href="img/favicon.png">
     <link rel="stylesheet" href="style/reset.css">
     <link rel="stylesheet" href="style/style.css">
@@ -13,22 +13,22 @@
 </head>
 <body>
     <header class="page-header">
-        <img class="foto-home" src="img/eu.jpg" alt="Foto de João da Silva">
-        <h1>João da Silva</h1>
-        <p class="subtitulo-principal">Desenvolvedor web</p>
-        <a id="followme" href="http://twitter.com"><span>Siga-me no twitter!</span></a>
-        <ul>
-            <li class="palavra-home eficiencia">Eficiência</li>
-            <li class="palavra-home boas-praticas">Boas práticas</li>
-            <li class="palavra-home codigo-limpo">Código limpo</li>
-            <li class="palavra-home css3">CSS3</li>
-            <li class="palavra-home html5">HTML5</li>
-            <li class="palavra-home javascript">JavaScript</li>
-            <li class="palavra-home acessibilidade">Acessibilidade</li>
-            <li class="palavra-home responsivo">Responsivo</li>
-            <li class="palavra-home otimizacoes">Otimizações</li>
-            <li class="palavra-home agilidade">Agilidade</li>
-            <li class="palavra-home design">Design</li>
+        <img class="foto-home" src="img/eu.jpg" alt="Foto de Samuel L. Jackson">
+        <h1>Samuel L. Jackson</h1>
+        <p class="subtitulo-principal">Ator e Produtor</p>
+        <a class="followme" href="http://twitter.com"><span>Siga-me no twitter!</span></a>
+        <ul class="palavras-home">
+            <li class=" eficiencia">Pulp Fiction</li>
+            <li class=" boas-praticas">Star Wars</li>
+            <li class=" codigo-limpo">Homem de Ferro</li>
+            <li class=" css3">Capitão América</li>
+            <li class=" html5">Vingadores</li>
+            <li class=" javascript">Django Livre</li>
+            <li class=" acessibilidade">Kingsman</li>
+            <li class=" responsivo">Bastardos Inglórios</li>
+            <li class=" otimizacoes">Kill Bill</li>
+            <li class=" agilidade">Triplo X</li>
+            <li class=" design">S.W.A.T.</li>
         </ul>
 
     </header>
@@ -38,8 +38,8 @@
                 <span class="saudacao-inicio">
                     Olá,
                 </span> 
-                meu nome é <strong>João da Silva</strong> 
-                <span class="saudacao-ultima-linha">e eu construo <em>sites maravilhosos</em></span>
+                meu nome é <strong>Samuel L. Jackson</strong> 
+                <span class="saudacao-ultima-linha">e eu faço <em>filmes maravilhosos</em></span>
             </p>
             <a class="botao-index" href="bio.html">Conheça mais um pouco sobre mim</a>
         </section>
