--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>
-            Portfólio - Jão da Silva
+            Portfólio - Samuel L. Jackson
         </title>
         <link rel="icon" href="img/favicon.png">
         <link rel="stylesheet" href="style/reset.css">
@@ -66,9 +66,9 @@
             </div>
             </main>
             
-            <img src="img/eu.jpg" alt="foto de Jão da Silva" class="img-aside">
+            <img src="img/eu.jpg" alt="foto de Samuel L. Jackson" class="img-aside">
             <aside class="navegacao">
-                <h1>Jão da silva</h1>
+                <h1>Samuel L.<br>Jackson</h1>
                 <nav>
                 <ul class="navigation">
                     <li><a href="index.html">Home</a></li>
@@ -84,8 +84,8 @@
                 </ul>
                 </nav>
             </aside>
-            <footer class="rodape-site" class="clearfix">
-                &copy; Jão da Silva 2018
+            <footer class="rodape-site">
+                &copy; Samuel L. Jackson 2018
             </footer>
         </body>
     </html>
