--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>
-            Blog - Jão da Silva
+            Blog - Samuel L. Jackson
         </title>
         <link rel="icon" href="img/favicon.png">
         <link rel="stylesheet" href="style/reset.css">
@@ -54,9 +54,9 @@
             </div>
         </main>
         
-        <img src="img/eu.jpg" alt="foto de Jão da Silva" class="img-aside">
+        <img src="img/eu.jpg" alt="foto de Samuel L. Jackson" class="img-aside">
         <aside class="navegacao">
-            <h1>Jão da silva</h1>
+            <h1>Samuel L.<br>Jackson</h1>
             <nav>
             <ul class="navigation">
                 <li><a href="index.html">Home</a></li>
@@ -72,8 +72,8 @@
             </ul>
             </nav>
         </aside>
-        <footer class="rodape-site" class="clearfix">
-            &copy; Jão da Silva 2018
+        <footer class="rodape-site">
+            &copy; Samuel L. Jackson 2018
         </footer>
     </body>
 </html>
