--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt">
 <head>
     <meta charset="UTF-8">
-    <title>Samuel L. Jackson - Desenvolvedor Web</title>
+    <title>Samuel L. Jackson - Ator de Produtor</title>
     <link rel="shortcut icon" href="img/favicon.png">
     <link rel="stylesheet" href="style/reset.css">
     <link rel="stylesheet" href="style/style.css">
@@ -12,23 +12,26 @@
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Shadows+Into+Light">
 </head>
 <body>
+    <div class="notice">
+        Parabéns! 
+    </div>
     <header class="page-header">
         <img class="foto-home" src="img/eu.jpg" alt="Foto de Samuel L. Jackson">
         <h1>Samuel L. Jackson</h1>
         <p class="subtitulo-principal">Ator e Produtor</p>
         <a class="followme" href="http://twitter.com"><span>Siga-me no twitter!</span></a>
         <ul class="palavras-home">
-            <li class=" eficiencia">Pulp Fiction</li>
-            <li class=" boas-praticas">Star Wars</li>
-            <li class=" codigo-limpo">Homem de Ferro</li>
-            <li class=" css3">Capitão América</li>
-            <li class=" html5">Vingadores</li>
-            <li class=" javascript">Django Livre</li>
-            <li class=" acessibilidade">Kingsman</li>
-            <li class=" responsivo">Bastardos Inglórios</li>
-            <li class=" otimizacoes">Kill Bill</li>
-            <li class=" agilidade">Triplo X</li>
-            <li class=" design">S.W.A.T.</li>
+            <li class="palavra-home eficiencia">Pulp Fiction</li>
+            <li class="palavra-home boas-praticas">Star Wars</li>
+            <li class="palavra-home codigo-limpo">Homem de Ferro</li>
+            <li class="palavra-home css3">Capitão América</li>
+            <li class="palavra-home html5">Vingadores</li>
+            <li class="palavra-home javascript">Django Livre</li>
+            <li class="palavra-home acessibilidade">Kingsman</li>
+            <li class="palavra-home responsivo">Bastardos Inglórios</li>
+            <li class="palavra-home otimizacoes">Kill Bill</li>
+            <li class="palavra-home agilidade">Triplo X</li>
+            <li class="palavra-home design">S.W.A.T.</li>
         </ul>
 
     </header>
