Cubo se movendo

--- a/transform/transform.html
+++ b/transform/transform.html
@@ -6,6 +6,7 @@
 	display: block;	
 	top:0;
 	left: 0;
+	transition: .2s;
 }
 .cubo{
 	position: relative;
@@ -21,33 +22,80 @@
 	background-color: blue;
 	transform: translateX(-100px) rotateY(90deg);  
 }
+.esquerda:hover{
+	background-color: rgba(0, 0, 255, 0.6);
+}
 .direita{
 	background-color: green;	
 	transform: translateX(100px) rotateY(90deg);  
+}
+.direita:hover{
+	background-color: rgba(0, 255, 0, 0.6);
 }
 .cima{	
 	background-color: yellow;
 	transform: translateY(-100px) rotateX(90deg);
 }
+.cima:hover{
+	background-color: rgba(255, 255, 0, 0.6);
+}
 .baixo{
 	background-color: magenta;
 	transform: translateY(100px) rotateX(90deg);
+}
+.baixo:hover{
+	background-color: rgba(255, 0, 255, 0.6);
 }
 .traz{
 	background-color: red;
 	transform: translateZ(-100px);
 }
+.traz:hover{
+	background-color: rgba(255, 0, 0, 0.6);
+}
 .frente{	
-	background-color: orange;	
+	background-color: rgb(255, 165, 0);	
 	transform: translateZ(100px);
 }
+.frente:hover{
+	background-color: rgba(255, 165, 0, 0.6);
+}
 </style>
+<input id="vertical" class="range-bar range-vertical" type="range" min="-360" max="360" value="10">
 
-<div class="cubo">    
-	<div class="face frente">A</div>    
-	<div class="face esquerda">B</div>    
-	<div class="face direita">C</div>    
-	<div class="face cima">D</div>    
-	<div class="face baixo">E</div>    
-	<div class="face traz">F</div>
+<input id="horizontal" class="range-bar range-horizontal" type="range" min="-360" max="360" value="10">
+
+<div id="cubo" class="cubo">    
+	<div class="face frente"></div>    
+	<div class="face esquerda"></div>    
+	<div class="face direita"></div>    
+	<div class="face cima"></div>    
+	<div class="face baixo"></div>    
+	<div class="face traz"></div>
 </div>
+<script type="text/javascript">
+	var vertical = document.getElementById("vertical");
+	var horizontal = document.getElementById("horizontal");
+	
+	vertical.addEventListener("change", function(){
+		document.getElementById("cubo").style.transform = "rotateX("+ horizontal.value +"deg) rotateY("+ this.value +"deg)"	
+	});
+	horizontal.addEventListener("change", function(){
+		document.getElementById("cubo").style.transform = "rotateX("+ this.value +"deg) rotateY("+ vertical.value +"deg)"			
+	});
+
+	i=-360;
+		setInterval(function(){
+			document.getElementById("cubo").style.transform = "rotateX("+ i +"deg) rotateY("+ i +"deg)"	
+			if (i < 360){
+				i++;
+			}
+			else{
+				i = -360;
+			}
+			
+		},100);
+	
+
+</script>
+
