--- a/index.html
+++ b/index.html
@@ -12,9 +12,6 @@
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Shadows+Into+Light">
 </head>
 <body>
-    <div class="notice">
-        Parabéns! 
-    </div>
     <header class="page-header">
         <img class="foto-home" src="img/eu.jpg" alt="Foto de Samuel L. Jackson">
         <h1>Samuel L. Jackson</h1>
@@ -22,7 +19,7 @@
         <a class="followme" href="http://twitter.com"><span>Siga-me no twitter!</span></a>
         <ul class="palavras-home">
             <li class="palavra-home eficiencia">Pulp Fiction</li>
-            <li class="palavra-home boas-praticas">Star Wars</li>
+            <li class="palavra-home boas-praticas" title="as Mace Windu">Star Wars</li>
             <li class="palavra-home codigo-limpo">Homem de Ferro</li>
             <li class="palavra-home css3">Capitão América</li>
             <li class="palavra-home html5">Vingadores</li>
@@ -59,14 +56,24 @@
             <h2>Blog</h2>
             <small>Últimos posts</small>
             <ol>
-                <li>
-                    <a href="blog.html">O essencial de design responsivo</a>
+                <li class="recent-post">
+                    <a class="link-to-post" href="blog.html"><span class="home-post-title">O essencial de design responsivo</span></a>
                     <p class="inicio-post">
                         Design responsivo tem ganho cada vez mais atenção como técnica de desenvolvimento de páginas web para dispositivos móveis. Mas como começar?
                     </p>
                 </li>
-                <li><a href="blog.html">Por que fazer páginas acessíveis?</a></li>
-                <li><a href="blog.html">JavaScript não obstrusivo</a></li>
+                <li class="recent-post">
+                    <a class="link-to-post" href="blog.html"> <span class="home-post-title">Por que fazer páginas acessíveis?</span></a>
+                    <p class="inicio-post">
+                        b
+                    </p>
+                </li>
+                <li class="recent-post">
+                    <a class="link-to-post" href="blog.html"><span class="home-post-title">JavaScript não obstrusivo</span></a>
+                    <p class="inicio-post">
+                        c
+                    </p>
+                </li>
             </ol>
             <a class="botao-index" href="blog.html">Veja mais</a>
         </section>
