--- a/portfolio.html
+++ b/portfolio.html
@@ -70,22 +70,22 @@
             <aside class="navegacao">
                 <h1>Samuel L.<br>Jackson</h1>
                 <nav>
-                <ul class="navigation">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="portfolio.html">Portfolio</a></li>
-                    <li><a href="bio.html">Sobre mim</a></li>
-                    <li><a href="blog.html">Blog</a></li>
-                    <li><a href="contato.html">Contato</a></li>
-                </ul>
-                <ul class="icones-sociais">
-                    <li> <a id="github" href="https://github.com"> GitHub </a> </li>
-                    <li> <a id="twitter" href="https://twitter.com"> Twitter </a> </li>
-                    <li> <a id="linkedin" href="https://linkedin.com"> LinkedIn </a> </li>
-                </ul>
+                    <ul>
+                        <li class="item-nav"><a href="index.html">Home</a></li>
+                        <li class="item-nav"><a href="portfolio.html">Portfolio</a></li>
+                        <li class="item-nav"><a href="bio.html">Sobre mim</a></li>
+                        <li class="item-nav"><a href="blog.html">Blog</a></li>
+                        <li class="item-nav"><a href="contato.html">Contato</a></li>
+                    </ul>
+                    <ul class="icones-sociais">
+                        <li> <a id="github" href="https://github.com"> GitHub </a> </li>
+                        <li> <a id="twitter" href="https://twitter.com"> Twitter </a> </li>
+                        <li> <a id="linkedin" href="https://linkedin.com"> LinkedIn </a> </li>
+                    </ul>
                 </nav>
             </aside>
             <footer class="rodape-site">
-                &copy; Samuel L. Jackson 2018
+                <span class="texto-rodape">&copy; Samuel L. Jackson 2018</span>
             </footer>
         </body>
     </html>
