--- a/blog.html
+++ b/blog.html
@@ -67,7 +67,7 @@
                 </ul>
                 <ul class="icones-sociais">
                     <li> <a class="social-icon github" data-subtitle="Veja minhas contribuições" href="https://github.com"> GitHub </a> </li>
-                    <li> <a calss="social-icon twitter" data-subtitle="Me siga no Twitter" href="https://twitter.com"> Twitter </a> </li>
+                    <li> <a class="social-icon twitter" data-subtitle="Me siga no Twitter" href="https://twitter.com"> Twitter </a> </li>
                     <li> <a class="social-icon linkedin" data-subtitle="Me siga no LinkedIn" href="https://linkedin.com"> LinkedIn </a> </li>
                 </ul>
             </nav>
