--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
             <div class="container">
                 <h2>Meus projetos</h2>
                 <p>Veja os projetos mais relevantes que desenvolvi durante a minha carreira</p>
-                <ul>
+                <ul class="meus-trabalhos">
                     <li class="box">
                         <a href="#">
                             <figure>
@@ -58,6 +58,16 @@
                                 <img src="img/g1.png" alt="g1" class="portfolio-img">
                                 <figcaption>
                                     G1.com.br: Reformulação e implemetação de HTMl, CSS e Javascript.
+                                </figcaption>
+                            </figure>
+                        </a>
+                    </li>
+                    <li class="box">
+                        <a href="#">
+                            <figure>
+                                <img src="img/terra.png" alt="terra" class="portfolio-img">
+                                <figcaption>
+                                    Terra.com.br: implementação de design responsivo
                                 </figcaption>
                             </figure>
                         </a>
