--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
         <section class="secao-inicio trabalhos">
             <h2>Trabalhos</h2>
             <ul>
-                <li><img src="img/bmw.png" alt="Site da BMW"></li>
-                <li><img src="img/ibm.png" alt="Site da IBM"></li>
-                <li><img src="img/uol.png" alt="Site da UOL"></li>
+                <li class="item-trabalhos"><img src="img/bmw.png" alt="Site da BMW"></li>
+                <li class="item-trabalhos"><img src="img/ibm.png" alt="Site da IBM"></li>
+                <li class="item-trabalhos"><img src="img/uol.png" alt="Site da UOL"></li>
             </ul>
             <a class="botao-index" href="portfolio.html">Veja mais</a>
         </section>
