--- a/contato.html
+++ b/contato.html
@@ -16,7 +16,7 @@
         <header class="page-header">
             <h1>Contato</h1>
         </header>
-        <main class="float-right">
+        <main class=" ">
             <div class="container">
                 <form class="contact-form">
                     <fieldset class="form-fieldset">
