--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
         <header class="page-header">
             <h1>Portfólio</h1>
         </header>
-        <main class="float-right">
+        <main class=" ">
             <div class="container">
                 <h2>Meus projetos</h2>
                 <p>Veja os projetos mais relevantes que desenvolvi durante a minha carreira</p>
